# logic_game

./: CMakeLists.txt  README.md  build.bat  raylib_vcpkg.bat  run.bat  vcpkg_setup.bat
docs/: Index.md
src/: debug.c  debug.h  definitions.h  globals.h  gui.h  includes.h  main.c
src/gui/: color.c  colors.h  elements.c  factories.c  utils.c
src/gui/components/: base.c  components.h
